--- a/RLE_estuaries.qmd
+++ b/RLE_estuaries.qmd
@@ -11,11 +11,15 @@ library(sf)
 library(tidyverse)
 library(readxl)
 
-# Add spatial data 
-est_v <-st_read("C:/Users/skownoa/Dropbox/NBAwork/Estuaries/NBA2018_Estuaries_RLE_PL_COND_PRES_PRIORsj.shp") 
+# Add spatial data - use IEM Jan 2025 then extract Estuaries
+est_v <-st_read("C:/Users/skownoa/Dropbox/NBAwork/IEMworking/IEM5_12_07012025.gdb", layer = "IEM5_12_07012025") 
+est_v <- est_v %>%
+  mutate(outletID = as.numeric(E_EstID)) %>% # IEM miss names outletID as EstID (these are different codes)
+  filter(outletID > 0, E_Est_BrdG != "Micro-System") # select only estuaries and exclude micros 
 
-# Add tabular data
-est_t <- read_excel("C:/Users/skownoa/Dropbox/NBAwork/Estuaries/EstuaryHealth2025.xlsx", sheet = "Data")
+
+# Add tabular data (in excel change sheet name to Data, and remove last two rows on NAs, change cols with numbers at start of name )
+est_t <- read_excel("C:/Users/skownoa/Dropbox/NBAwork/Estuaries/estuary_assesment2025_v1.xlsx", sheet = "Data")
 
 ```
 
@@ -25,66 +29,63 @@ est_t <- read_excel("C:/Users/skownoa/Dropbox/NBAwork/Estuaries/EstuaryHealth202
 
 options(scipen = 999)
 
-# Estuaries have seperate features for EFZ SHORE and EFZ, merge these together for calculating PA extent and EOO etc. 
+# Estuaries have separate features for EFZ SHORE and EFZ, merge these together for calculating PA extent and EOO etc. Also IEM estuaries are divided up due to integration in IEM, so need to merge features based on outletID 
 est_v2 <- est_v %>%
-  group_by(EST_IDw) %>%
-  summarise(across(where(~ !inherits(.x, "sfc")), first),  
-            geometry = st_union(geometry),                
-            .groups = "drop") %>%
-  select(EST_IDw) %>%
-  rename(EstID = EST_IDw)
-  
+  group_by(outletID) %>%
+  summarise(Shape = st_union(Shape), .groups = "drop")  
+
+# select colums from  health spreadsheet import
 est_t2 <- est_t %>%
-  select(EstID, NAME, Full_Ecosystem_type_name, Estuary_Ecosystem_Type_Code, EFZ_Ha, score24, score18, score11, Fishing_Pressure)
+  select(outletID,  estID, east_DD, south_DD, est_name, full_ecosystem_type_name, est_ecosystem_type_code, biogeographical_zone, efz_ha, condition24, condition18, condition11, fishing_effort24, fishing_effort18, fishing_effort11)
 
 # combined estuary data into a table
 est <- est_v2 %>%
-  left_join(est_t2, by = "EstID") %>%
+  left_join(est_t2, by = "outletID") %>%
   # recalculate EFZ area m2 to check the data from Lara is correct
    mutate(efz_area = as.numeric(st_area(.))) %>%
 st_drop_geometry() %>%
-  # convert health scores to Condition Classes 
-  mutate(cond11 = case_when(
-    round(score11, 0) >= 90 ~ "Natural",
-    round(score11, 0) >= 75 ~ "NearNatural",
-    round(score11, 0) >= 60 ~ "Moderate",
-    round(score11, 0) >= 40 ~ "Heavily",
+  # convert condition  scores to NBA modification classes  
+  mutate(mod11 = case_when(
+    round(condition11, 0) >= 90 ~ "Natural",
+    round(condition11, 0) >= 75 ~ "NearNatural",
+    round(condition11, 0) >= 60 ~ "Moderate",
+    round(condition11, 0) >= 40 ~ "Heavily",
     TRUE ~ "Severely"
   )) %>%
-  mutate(cond18 = case_when(
-    round(score18, 0) >= 90 ~ "Natural",
-    round(score18, 0) >= 75 ~ "NearNatural",
-    round(score18, 0) >= 60 ~ "Moderate",
-    round(score18, 0) >= 40 ~ "Heavily",
+  mutate(mod18 = case_when(
+    round(condition18, 0) >= 90 ~ "Natural",
+    round(condition18, 0) >= 75 ~ "NearNatural",
+    round(condition18, 0) >= 60 ~ "Moderate",
+    round(condition18, 0) >= 40 ~ "Heavily",
     TRUE ~ "Severely"
   )) %>%
-   mutate(cond24 = case_when(
-    round(score24, 0) >= 90 ~ "Natural",
-    round(score24, 0) >= 75 ~ "NearNatural",
-    round(score24, 0) >= 60 ~ "Moderate",
-    round(score24, 0) >= 40 ~ "Heavily",
+   mutate(mod24 = case_when(
+    round(condition24, 0) >= 90 ~ "Natural",
+    round(condition24, 0) >= 75 ~ "NearNatural",
+    round(condition24, 0) >= 60 ~ "Moderate",
+    round(condition24, 0) >= 40 ~ "Heavily",
     TRUE ~ "Severely"
   )) %>%
-  # convert health scores to PES classes
+   # convert condition  scores to PES classes
   mutate(pes11 = case_when(
-    round(score11, 0) >= 90 ~ "A",
-    round(score11, 0) >= 75 ~ "B",
-    round(score11, 0) >= 60 ~ "C",
-    round(score11, 0) >= 40 ~ "D",
+    round(condition11, 0) >= 90 ~ "A",
+    round(condition11, 0) >= 75 ~ "B",
+    round(condition11, 0) >= 60 ~ "C",
+    round(condition11, 0) >= 40 ~ "D",
     TRUE ~ "E"
   )) %>%
   mutate(pes18 = case_when(
-    round(score18, 0) >= 90 ~ "A",
-    round(score18, 0) >= 75 ~ "B",
-    round(score18, 0) >= 60 ~ "C",
-    round(score18, 0) >= 40 ~ "D",
+    round(condition18, 0) >= 90 ~ "A",
+    round(condition18, 0) >= 75 ~ "B",
+    round(condition18, 0) >= 60 ~ "C",
+    round(condition18, 0) >= 40 ~ "D",
     TRUE ~ "E"
   )) %>%
    mutate(pes24 = case_when(
-    round(score24, 0) >= 90 ~ "A",
-    round(score24, 0) >= 75 ~ "B",
-    round(score24, 0) >= 60 ~ "C",
-    round(score24, 0) >= 40 ~ "D",
+    round(condition24, 0) >= 90 ~ "A",
+    round(condition24, 0) >= 75 ~ "B",
+    round(condition24, 0) >= 60 ~ "C",
+    round(condition24, 0) >= 40 ~ "D",
     TRUE ~ "E"
   )) 
 
@@ -96,14 +97,16 @@ st_drop_geometry() %>%
 ```{r}
 # prepare an estuary spatial layer with correct names (from the table)
 est_v3 <- est_v2 %>%
-  left_join(est_t2, by = "EstID")
+  left_join(est_t2, by = "outletID") %>%
+  select(outletID, full_ecosystem_type_name, est_name)
+
   
 # Initialize a list to store results
 eoo_list <- list()
 
 # Iterate through unique Est type values 
-for (est_type in unique(est_v3$Full_Ecosystem_type_name)) {
-  subset_data <- est_v3 %>% filter(Full_Ecosystem_type_name == est_type)
+for (est_type in unique(est_v3$full_ecosystem_type_name)) {
+  subset_data <- est_v3 %>% filter(full_ecosystem_type_name == est_type)
   if (nrow(subset_data) > 0) {
     convex_hull <- st_convex_hull(st_union(subset_data))
     hull_area <- st_area(convex_hull)
@@ -112,7 +115,7 @@ for (est_type in unique(est_v3$Full_Ecosystem_type_name)) {
 }
 
 eoo_df <- data.frame(
-  Full_Ecosystem_type_name = names(eoo_list),
+  full_ecosystem_type_name = names(eoo_list),
   AREA_EOO = unlist(eoo_list)
 ) %>%
   mutate(eoo_km2 = AREA_EOO/1000000) %>%
@@ -133,20 +136,20 @@ options(scipen = 999)
 # overall type x pes summary
 
 est_type_24 <- est %>%
-    group_by(Full_Ecosystem_type_name, pes24) %>%
+    group_by(full_ecosystem_type_name, pes24) %>%
   summarise(extent = sum(as.numeric(efz_area), na.rm = TRUE)) %>%
   ungroup() %>%
   pivot_wider(names_from = pes24, values_from = extent, values_fill = list(extent = 0))  %>%
   mutate(tot_ext24 = rowSums(across(c(A, B, C, D, E))))
 est_type_18 <- est %>%
-    group_by(Full_Ecosystem_type_name, pes18) %>%
+    group_by(full_ecosystem_type_name, pes18) %>%
   summarise(extent = sum(as.numeric(efz_area), na.rm = TRUE)) %>%
   ungroup() %>%
   pivot_wider(names_from = pes18, values_from = extent, values_fill = list(extent = 0))  %>%
   mutate(tot_ext18 = rowSums(across(c(A, B, C, D, E)))) %>%
   rename(A18=A, B18=B, C18=C, D18=D, E18=E)
 est_type_11 <- est %>%
-    group_by(Full_Ecosystem_type_name, pes11) %>%
+    group_by(full_ecosystem_type_name, pes11) %>%
   summarise(extent = sum(as.numeric(efz_area), na.rm = TRUE)) %>%
   ungroup() %>%
   pivot_wider(names_from = pes11, values_from = extent, values_fill = list(extent = 0))  %>%
@@ -157,9 +160,9 @@ est_type_11 <- est %>%
 # Join the tables above - this makes a single table in which all the required metrics can be found to compute RLE
  
   est_type_metrics <- est_type_24 %>%
-   left_join(est_type_18, by = "Full_Ecosystem_type_name") %>%
-   left_join(est_type_11, by = "Full_Ecosystem_type_name") %>%
-   left_join(eoo_df, by = "Full_Ecosystem_type_name") %>%
+   left_join(est_type_18, by = "full_ecosystem_type_name") %>%
+   left_join(est_type_11, by = "full_ecosystem_type_name") %>%
+   left_join(eoo_df, by = "full_ecosystem_type_name") %>%
  # 2018 metrics
     mutate(prp18_cde = (C18 + D18 + E18)/tot_ext18) %>%
     mutate(prp18_de = (D18 + E18)/tot_ext18) %>%
@@ -217,11 +220,11 @@ est_type_11 <- est %>%
    
    # reattached bioregions
  bioreg <- est_t %>%
-  select(Full_Ecosystem_type_name, Biogeographical_Region) %>%
-      distinct(Full_Ecosystem_type_name, .keep_all = TRUE)
+  select(full_ecosystem_type_name, biogeographical_zone) %>%
+      distinct(full_ecosystem_type_name, .keep_all = TRUE)
  
  est_type_metrics <- est_type_metrics %>%
-      left_join(bioreg , by = "Full_Ecosystem_type_name" )
+      left_join(bioreg , by = "full_ecosystem_type_name" )
  
     
    # export a csv of results - Condition and EPL per river type 2018 and 2024
@@ -231,11 +234,11 @@ est_type_11 <- est %>%
 #### Output tables
 
 ```{r}
-# 2018 summaries
-# make summary counts of RLE categories per HGM
+# 2024 summaries
+# make summary counts of RLE categories per zone
  
   rle24_sum <- est_type_metrics %>%
-    group_by(RLE_24, Biogeographical_Region) %>%
+    group_by(RLE_24, biogeographical_zone) %>%
   summarise(count = n(),.groups = 'drop') %>%
   pivot_wider(names_from = RLE_24, 
               values_from = count, values_fill = 0) %>%
@@ -245,19 +248,39 @@ est_type_11 <- est %>%
   mutate(Total = sum(c_across(where(is.numeric)))) %>%
   ungroup() %>%
   # Add TOTAL row (column-wise sums)
-  bind_rows(summarise(., Biogeographical_Region = "Total", across(where(is.numeric), sum))) %>%
+  bind_rows(summarise(., biogeographical_zone = "Total", across(where(is.numeric), sum))) %>%
   # Add RLE index
   mutate(RLIE = (1-((CR*4)+(EN*3)+(VU*2)+(LC*1))/((CR+EN+VU+LC)*5))) %>%
-     mutate(Biogeographical_Region = factor(Biogeographical_Region, levels = c("Total", "dTropical", "cSubTrop" , "bWTemp", "aCTemp"))) %>% ## ggplot plots inverted factors!
-   arrange(Biogeographical_Region)
+     mutate(biogeographical_zone = factor(biogeographical_zone, levels = c("Total", "dTropical", "cSubTrop" , "bWTemp", "aCTemp"))) %>% ## ggplot plots inverted factors!
+   arrange(biogeographical_zone)
  
-  
  # export a csv of results - COUNT of RLE 24 per biorg zone
  write.csv(rle24_sum, file = "outputs/rle24_est_sum_count.csv") 
+
+ # 2018 summary 
+rle18_sum <- est_type_metrics %>%
+    group_by(RLE_18, biogeographical_zone) %>%
+  summarise(count = n(),.groups = 'drop') %>%
+  pivot_wider(names_from = RLE_18, 
+              values_from = count, values_fill = 0) %>%
+  relocate(VU, .before = EN)%>%
+     # Add row-wise TOTAL
+  rowwise() %>%
+  mutate(Total = sum(c_across(where(is.numeric)))) %>%
+  ungroup() %>%
+  # Add TOTAL row (column-wise sums)
+  bind_rows(summarise(., biogeographical_zone = "Total", across(where(is.numeric), sum))) %>%
+  # Add RLE index
+  mutate(RLIE = (1-((CR*4)+(EN*3)+(VU*2)+(LC*1))/((CR+EN+VU+LC)*5))) %>%
+     mutate(biogeographical_zone = factor(biogeographical_zone, levels = c("Total", "dTropical", "cSubTrop" , "bWTemp", "aCTemp"))) %>% ## ggplot plots inverted factors!
+   arrange(biogeographical_zone)
+ 
+ # export a csv of results - COUNT of RLE 24 per biorg zone
+ write.csv(rle18_sum, file = "outputs/rle18_est_sum_count.csv")  
  
  # make summary of extent of RLE
  rle24_sum_ext <- est_type_metrics %>%
-    group_by(RLE_24, Biogeographical_Region) %>%
+    group_by(RLE_24, biogeographical_zone) %>%
   summarise(extent = round(sum(tot_ext24)/1000000, 0),.groups = 'drop') %>%
   pivot_wider(names_from = RLE_24, 
               values_from = extent, values_fill = 0) %>%
@@ -267,10 +290,9 @@ est_type_11 <- est %>%
   mutate(Total = sum(c_across(where(is.numeric)))) %>%
   ungroup() %>%
   # Add TOTAL row (column-wise sums)
-  bind_rows(summarise(., Biogeographical_Region = "Total", across(where(is.numeric), sum))) %>%
-   mutate(Biogeographical_Region = factor(Biogeographical_Region, levels = c("Total", "dTropical", "cSubTrop" , "bWTemp", "aCTemp"))) %>% ## ggplot plots inverted factors!
-   arrange(Biogeographical_Region)
- 
+  bind_rows(summarise(., biogeographical_zone = "Total", across(where(is.numeric), sum))) %>%
+   mutate(biogeographical_zone = factor(biogeographical_zone, levels = c("Total", "dTropical", "cSubTrop" , "bWTemp", "aCTemp"))) %>% ## ggplot plots inverted factors!
+   arrange(biogeographical_zone)
  
  # export a csv of results - EXTENT (km) of REL 24 per biorg zone
   write.csv(rle24_sum_ext, file = "outputs/rle24_est_sum_ext.csv")
@@ -296,7 +318,7 @@ pd_rle24_count <- rle24_sum %>%
   # select(-...1) # required if importing from CSV
  
 rle24_barplot_count <- nba_plot(pd_rle24_count,
-                  `Biogeographical_Region`,
+                  `biogeographical_zone`,
                   2:5,
                  CHRT = "bar",
                  NUM = TRUE,
@@ -327,7 +349,7 @@ pd_rle24_ext <- rle24_sum_ext %>%
   # select(-...1) # required if importing from CSV
  
 rle24_barplot_ext <- nba_plot(pd_rle24_ext,
-                  `Biogeographical_Region`,
+                  `biogeographical_zone`,
                   2:5,
                  CHRT = "bar",
                  NUM = FALSE,
@@ -350,26 +372,27 @@ ggsave(
 
 # Make a line plot of EPL Index using 2018 and 2014 timepoints - request Natasha to impve this or add to package.
 
-EPLI <- epl24_sum %>%
-  select(Biogeographical_Region, EPLI) %>% 
-  rename(EPLI24 = EPLI) %>%
-   left_join(epl18_sum, by ="Biogeographical_Region") %>%
-   rename(EPLI18 = EPLI) %>%
-   rename(Zone = Biogeographical_Region) %>%
-  select(Zone,EPLI18, EPLI24) %>%
-  pivot_longer(cols = c(2,3), names_to = "Year", values_to = "EPLI") %>%
+RLIE <- rle24_sum %>%
+  select(biogeographical_zone, RLIE) %>% 
+  rename(RLIE24 = RLIE) %>%
+   left_join(rle18_sum, by ="biogeographical_zone") %>%
+   rename(RLIE18 = RLIE) %>%
+   rename(Zone = biogeographical_zone) %>%
+  select(Zone,RLIE18, RLIE24) %>%
+  pivot_longer(cols = c(2,3), names_to = "Year", values_to = "RLIE") %>%
     mutate(Year = case_when(
-    Year == "EPLI18" ~ "2018",
-    Year == "EPLI24" ~ "2024",
+    Year == "RLIE18" ~ "2018",
+    Year == "RLIE24" ~ "2024",
     TRUE ~ Year
   ))
   
- epli_line_plot <- ggplot(EPLI, aes(x = Year, y = EPLI, group = Zone)) +
+
+rlie_line_plot <- ggplot(RLIE, aes(x = Year, y = RLIE, group = Zone)) +
   geom_line(aes(linetype = Zone, color = Zone), linewidth = 1.2) +
   geom_point(aes(color = Zone), size = 2) +
   theme_minimal() +
-  labs(x = "Year", y = "EPLI") +
-  scale_x_discrete(limits = c("2018", "2024")) +
+  labs(x = "Year", y = "RLIE") +
+  scale_x_discrete(limits = c("2018", "2024"), expand = c(0, 0)) +
   scale_color_manual(values = c(
     "Total" = "black",
     "aCTemp" = "blue",
@@ -381,15 +404,22 @@ EPLI <- epl24_sum %>%
     guides(color = guide_legend(reverse = TRUE),
          linetype = guide_legend(reverse = TRUE)) +
   theme(legend.title = element_blank())
-  
-   
-  epli_line_plot
+ 
   
   #export the graph
 ggsave(
-  filename = "outputs/epli_est_line_plot.pdf", # File name
-  plot = epli_line_plot,                   # Plot object
-  device = "pdf",                        # File format
-  width = 12, height = 10, units = "cm",   # Dimensions
+  filename = "outputs/rlie_est_line_plot.png", # File name
+  plot = rlie_line_plot,                   # Plot object
+  device = "png",                        # File format
+  width = 12, height = 10, units = "cm"   # Dimensions
 )
+```
+
+```{r}
+# Prepare output spatial data 
+est_rle_res_v <- est_v3 %>%
+  left_join(est_type_metrics, by = "full_ecosystem_type_name") %>%
+  relocate(biogeographical_zone, .after = full_ecosystem_type_name)
+ 
+st_write(est_rle_res_v, "C:/Users/skownoa/Dropbox/NBAwork/Estuaries/est_rle_results.gpkg") 
 ```
