--- a/RLE_EPL_results.qmd
+++ b/RLE_EPL_results.qmd
@@ -16,7 +16,7 @@ EPL <- read.csv("C:/Rdata/EPL_est/outputs/epl_est_metrics_per_type.csv")
 
 # select only cols required and then join
 RLE <- RLE %>%
-  select(full_ecosystem_type_name, RLE18, RLE24)
+  select(full_ecosystem_type_name, RLE18, trigger18, RLE24, trigger24)
 EPL <- EPL %>%
   select(full_ecosystem_type_name, biogeographical_zone, EPL18_model, EPL24_model) %>% 
   rename(EPL18 = EPL18_model, EPL24 = EPL24_model)
@@ -63,6 +63,7 @@ est_v <- est_v %>%
 est_results_vector <- est_v %>%
   left_join(est_results, by = "full_ecosystem_type_name") %>%
   relocate(biogeographical_zone, .after = full_ecosystem_type_name)
+est_results_vector <- st_transform(est_results_vector, 4326)
  
 st_write(est_results_vector, "C:/Users/skownoa/Dropbox/NBAwork/Estuaries/est_results_vector.gpkg", delete_dsn = TRUE) 
 ```
