--- a/RLE_EPL_results.qmd
+++ b/RLE_EPL_results.qmd
@@ -16,7 +16,7 @@ EPL <- read.csv("C:/Rdata/EPL_est/outputs/epl_est_metrics_per_type.csv")
 
 # select only cols required and then join
 RLE <- RLE %>%
-  select(full_ecosystem_type_name, RLE18, trigger18, RLE24, trigger24)
+  select(full_ecosystem_type_name, RLE18, trigger18, RLE24, trigger24, ETS18, ETS24)
 EPL <- EPL %>%
   select(full_ecosystem_type_name, biogeographical_zone, EPL18_model, EPL24_model) %>% 
   rename(EPL18 = EPL18_model, EPL24 = EPL24_model)
